--- a/edsl.cabal
+++ b/edsl.cabal
@@ -43,6 +43,7 @@ library
                      , llvm-hs-pure >= 4.1
                      , mtl >= 2.2
                      , bytestring >= 0.10
+                     , refined >= 0.1.2.1
   default-language:    Haskell2010
 
 executable edsl-exe
